[package]
name = "sprite-animator"
version = "0.1.0"
edition = "2021"
description = "A sprite animation tool with part-based characters and spritesheet export"
license = "MIT"

[dependencies]
bevy = "0.15"
bevy_egui = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = "0.25"
rfd = "0.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
