[package]
name = "pixel-sprite-studio"
version = "0.2.6"
edition = "2021"
description = "Pixel Sprite Studio - A sprite animation tool with part-based characters and spritesheet export"
license = "MIT"

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "multi_threaded",
    "png",
] }
bevy_egui = { version = "0.31", default-features = false, features = ["render", "default_fonts", "manage_clipboard", "open_url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15", default-features = false, features = ["x11"] }

[target.'cfg(target_os = "windows")'.dependencies]
rfd = "0.15"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
